place and time change

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <header id="site-header" class="site-header valign-center"> 
         <div class="intro">
             <h1>Behance <span class="primary-color">Portfolio Reviews</span> <br> Dhaka #4</h1>
-            <h2>12 December, 2015 / NewsCred</h2>
+            <h2>19 December, 2015 / SekaiLab Bangladeh</h2>
             <a class="btn btn-1 btn-1e" data-scroll href="#registration">Get  An Invite</a>
 
         </div>
