Parallax on header

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div><!-- /.container -->
     </nav>
 
-    <header id="site-header" class="site-header valign-center">
+    <header id="site-header" class="site-header valign-center" data-stellar-background-ratio="0.8">
         <div class="intro">
             <h1>Behance <span class="primary-color">Portfolio Reviews</span> <br> Dhaka #4</h1>
             <h2>19 December, 2015 / SekaiLab Bangladeh</h2>
@@ -492,6 +492,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
+    <script src="assets/js/jquery.stellar.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
