--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <li><a data-scroll href="#schedule">Schedule</a></li>
                     <li><a data-scroll href="#partner">Partner</a></li>
                     <li><a data-scroll href="#">Sponsorship</a></li>
+                    <li><a data-scroll href="#site-header">Registration</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li>
 
                 </ul>
@@ -56,7 +57,7 @@
         <div class="intro">
             <h1>Behance <span class="primary-color">Portfolio Reviews</span> <br> Dhaka #4</h1>
             <h2>19 December, 2015 / SekaiLab Bangladeh</h2>
-            <a class="btn btn-1 btn-1e" data-scroll href="#registration">Get  An Invite</a>
+            <a class="btn btn-1 btn-1e" href="http://goo.gl/forms/9RS1hkCPle">Get  An Invite</a>
 
         </div>
     </header>
@@ -69,11 +70,15 @@
                     <h3 class="section-title">About</h3>
 
                     <p>
-                    Behance Bangladesh is a community of creative people which is approved and supported by Behance & Adobe. The goal of the community is to initiate online and offline activities like arranging events, connecting members and create better opportunities for creatives around the country.
+                    	Behance Bangladesh is a community of creative people which is approved and supported by Behance & Adobe. The goal of the community is to initiate online and offline activities like arranging events, connecting members and create better opportunities for creatives around the country.
                     </p>
 
                     <p>
-                    Behance Portfolio Reviews, branded as BeReviews, is such a global community event hosted by local Behance communities around the <a href="https://www.behance.net/reviews">world</a>.
+                    	Behance Portfolio Reviews, branded as BeReviews, is such a global community event hosted by local Behance communities around the <a href="https://www.behance.net/reviews">world</a>.
+                    </p>
+
+                    <p>
+                    	BeReviewsDhaka#4 is one  of the event organized by Behance Bangladesh.This time it is greater & additionally energizing with our accomplished curated speakers structure different imaginative regions from everywhere throughout the nation. So don't miss the chance of meeting creatives, offer thoughts with them, adapting new things & enhance your innovative profession.
                     </p>
                 </div><!-- /.col-sm-12s -->
             </div><!-- /.row -->
@@ -86,19 +91,19 @@
                 <div class="col-sm-3">
 
                     <i class="icon-calendar"></i>
-                    <h3>2015<br>Decemeber</h3>
+                    <h3>19 December<br>2015</h3>
 
                 </div>
                 <div class="col-sm-3">
 
                     <i class="icon-location-pin"></i>
-                    <h3>NewsCred<br>Dhaka</h3>
+                    <h3>SekaiLab<br>Bangladesh</h3>
 
                 </div>
                 <div class="col-sm-3">
 
                     <i class="icon-badge"></i>
-                    <h3>150<br>Tickets</h3>
+                    <h3>100<br>Invites</h3>
 
                 </div>
                 <div class="col-sm-3">
@@ -129,9 +134,9 @@
                             <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-1.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
+                        <h4>Nazmul Ahmed</h4>
 
-                        <p>CEO of Peren</p>
+                        <p>CEO of Ennovision</p>
 
                         <ul class="social-block">
                             <li><a href=""><i class="icon-social-twitter"></i></a></li>
@@ -245,73 +250,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section id="registration" class="section registration">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="section-title">Register For  Event</h3>
-                </div>
-            </div>
-
-            <form action="#" id="registration-form">
-                <div class="row">
-                    <div class="col-md-12" id="registration-msg" style="display:none;">
-                        <div class="alert"></div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="First Name" id="fname" name="fname" required>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Last Name" id="lname" name="lname" required>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email" id="email" name="email" required>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Phone" id="cell" name="cell" required>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Address" id="address" name="address" required>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Zip Code" id="zip" name="zip" required>
-                        </div>
-
-                        <div class="form-group">
-                            <select class="form-control" name="city" id="city" required>
-                                <option readonly>City</option>
-                                <option>City Name 1</option>
-                                <option>City Name 2</option>
-                                <option>City Name 3</option>
-                                <option>City Name 4</option>
-                            </select>
-                        </div>
-
-                        <div class="form-group">
-                            <select class="form-control" name="program" id="program" required>
-                                <option readonly>Select Your Program</option>
-                                <option>Program Name 1</option>
-                                <option>Program Name 2</option>
-                                <option>Program Name 3</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="text-center mt20">
-                    <button type="submit" class="btn btn-black" id="registration-submit-btn">Submit</button>
-                </div>
-            </form>
         </div>
     </section>
 
