some more fixes & removing non necessary stuffs

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li><a data-scroll href="#schedule">Schedule</a></li>
                     <li><a data-scroll href="#partner">Partner</a></li>
                     <li><a data-scroll href="#">Sponsorship</a></li>
-                    <li><a data-scroll href="#site-header">Registration</a></li>
+                    <li><a href="http://goo.gl/forms/9RS1hkCPle">Registration</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li>
 
                 </ul>
@@ -53,7 +53,7 @@
         </div><!-- /.container -->
     </nav>
 
-    <header id="site-header" class="site-header valign-center" data-stellar-background-ratio="0.8">
+    <header id="site-header" class="site-header valign-center" data-stellar-background-ratio="0.5">
         <div class="intro">
             <h1>Behance <span class="primary-color">Portfolio Reviews</span> <br> Dhaka #4</h1>
             <h2>19 December, 2015 / SekaiLab Bangladeh</h2>
@@ -85,7 +85,7 @@
         </div><!-- /.container -->
     </section>
 
-    <section id="facts" class="section bg-image-1 facts text-center">
+    <section id="facts" class="section bg-image-1 facts text-center" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
@@ -109,7 +109,7 @@
                 <div class="col-sm-3">
 
                     <i class="icon-microphone"></i>
-                    <h3>06<br>Speakers</h3>
+                    <h3>03<br>Speakers</h3>
 
                 </div>
             </div><!-- row -->
@@ -141,8 +141,6 @@
                         <ul class="social-block">
                             <li><a href=""><i class="icon-social-twitter"></i></a></li>
                             <li><a href=""><i class="icon-social-facebook"></i></a></li>
-                            <li><a href=""><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href=""><i class="icon-social-gplus"></i></a></li>
                         </ul>
 
                     </div><!-- /.speaker -->
@@ -162,8 +160,6 @@
                         <ul class="social-block">
                             <li><a href=""><i class="icon-social-twitter"></i></a></li>
                             <li><a href=""><i class="icon-social-facebook"></i></a></li>
-                            <li><a href=""><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href=""><i class="icon-social-gplus"></i></a></li>
                         </ul>
 
                     </div><!-- /.speaker -->
@@ -183,73 +179,11 @@
                         <ul class="social-block">
                             <li><a href=""><i class="icon-social-twitter"></i></a></li>
                             <li><a href=""><i class="icon-social-facebook"></i></a></li>
-                            <li><a href=""><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href=""><i class="icon-social-gplus"></i></a></li>
                         </ul>
 
                     </div><!-- /.speaker -->
                 </div><!-- /.col-md-4 -->
             </div><!-- /.row -->
-
-            <div class="row">
-                <div class="col-md-4">
-
-                    <div class="speaker">
-
-                        <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-4.jpg">
-                        </figure>
-
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
-
-                        <ul class="social-block">
-                            <li><a href=""><i class="icon-social-twitter"></i></a></li>
-                            <li><a href=""><i class="icon-social-facebook"></i></a></li>
-                            <li><a href=""><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href=""><i class="icon-social-gplus"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4">
-
-                    <div class="speaker">
-
-                        <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-5.jpg">
-                        </figure>
-
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
-
-                        <ul class="social-block">
-                            <li><a href=""><i class="icon-social-twitter"></i></a></li>
-                            <li><a href=""><i class="icon-social-facebook"></i></a></li>
-                            <li><a href=""><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href=""><i class="icon-social-gplus"></i></a></li>
-                        </ul>
-
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="speaker">
-                        <figure>
-                            <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-6.jpg">
-                        </figure>
-                        <h4>Jhon Smith</h4>
-                        <p>CEO of Peren</p>
-                        <ul class="social-block">
-                            <li><a href=""><i class="icon-social-twitter"></i></a></li>
-                            <li><a href=""><i class="icon-social-facebook"></i></a></li>
-                            <li><a href=""><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href=""><i class="icon-social-gplus"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -260,8 +194,6 @@
                     <h3 class="text-uppercase mt0 font-400">Submit Your Contribution Work</h3>
 
                     <p>You've inspired new consumer, racked up click-thru's, blown-up brand awareness. We can't give you back the weekends you worked, or erase the pain of being forced to make the logo bigger. But if you submit your best work.</p>
-
-                    <a class="btn btn-white" href="#">Submit</a>
                 </div>
             </div>
         </div>
@@ -400,11 +332,11 @@
                 <div class="col-sm-3">
                     <h3 class="section-title">Event Location</h3>
                     <address>
-                        <p>Eardenia<br> The Grand Hall<br> House # 08, Road #52, Street<br> Phone: +1159t3764<br> Email: example@mail.com</p>
+                        <p>SekaiLab Bangladesh<br> The Grand Hall<br> House # 08, Road #52, Street<br> Phone: +1159t3764<br> Email: example@mail.com</p>
                     </address>
                 </div>
                 <div class="col-sm-9">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96706.50013548559!2d-78.9870674333782!3d40.76030630398601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited+States!5e0!3m2!1sen!2sbd!4v1436299406518" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://maps.google.com/maps?hl=en&q=Sekailab Bangladesh&ie=UTF8&t=roadmap&z=17&iwloc=B&output=embed" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -418,8 +350,6 @@
                     <ul class="social-block">
                         <li><a href=""><i class="icon-social-twitter"></i></a></li>
                         <li><a href=""><i class="icon-social-facebook"></i></a></li>
-                        <li><a href=""><i class="icon-social-linkedin"></i></a></li>
-                        <li><a href=""><i class="icon-social-gplus"></i></a></li>
                     </ul>
                 </div>
             </div>
