--- a/index.html
+++ b/index.html
@@ -239,16 +239,16 @@
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <a class="partner-box sponsor-box sponsor-box-1" target="_blank" href="http://www.sekai-lab.com/en"></a>
+                    <a class="partner-box sponsor-box-1" target="_blank" href="http://www.sekai-lab.com/en"></a>
                 </div>
                 <div class="col-sm-3">
-                    <a class="partner-box sponsor-box sponsor-box-2" target="_blank" href="http://magnitodigital.com/"></a>
+                    <a class="partner-box sponsor-box-2" target="_blank" href="http://magnitodigital.com/"></a>
                 </div>
                 <div class="col-sm-3">
-                    <a class="partner-box sponsor-box sponsor-box-3" target="_blank" href="https://shapebootstrap.net/"></a>
+                    <a class="partner-box sponsor-box-3" target="_blank" href="https://shapebootstrap.net/"></a>
                 </div>
                 <div class="col-sm-3">
-                    <a class="partner-box sponsor-box sponsor-box-4" target="_blank" href="https://graygrids.com/"></a>
+                    <a class="partner-box sponsor-box-4" target="_blank" href="https://graygrids.com/"></a>
                 </div>
             </div>
     </section>
